<resources>
    <string name="app_name">51借款本</string>

    <string name="login">登录</string>
    <string name="login_sure">确认登录</string>
    <string name="agreement">同意《软件网络服务协议》</string>
    <string name="phonenumber">手机号:</string>
    <string name="verificationcode">验证码:</string>
    <string name="getcode">获取验证码</string>
    <string name="phonenumber_empty">手机号为空</string>
    <string name="phonenumber_wrong">请输入正确的手机号</string>
    <string name="vercode_empty">请填写验证码</string>
    <string name="vercode_wrong">验证码格式错误</string>
    <string name="vercode_error">验证码错误</string>
    <string name="agreement_check">请先勾选相关协议</string>
    <string name="resend_code">秒后重发</string>

    <string name="login_immediately">立即登录</string>
    <string name="bill_complited">已完成账单</string>
    <string name="public_number">关注公众号</string>
    <string name="public_number_example">123456</string>
    <string name="login_cancle">注销登录</string>
    <string name="dialog_title_signout">是否退出当前账号？</string>
    <string name="cancle">取消</string>
    <string name="sure">确认</string>
    <string name="person_center">个人中心</string>
    <string name="person_information">个人资料</string>
    <string name="feedback">意见反馈</string>
    <string name="help">帮助</string>
    <string name="about">关于51借款本</string>
    <string name="public_name">犀牛优选</string>
    <string name="submit">提交</string>
    <string name="help_content">请关注“犀牛优选”公众号,\n获取帮助信息</string>
    <string name="feedback_content">感谢反馈，您已提交成功</string>

    <string name="bill_blank">还没有已完成的账单~</string>
    <string name="already_pay">已完成该账单</string>
    <string name="all_pay">共还款</string>
    <string name="pay_complite_date">完成还款日期</string>
    <string name="bill_completed">已完成账单</string>

    <string name="borrow_channel">*借款渠道</string>
    <string name="platform_name">请输入平台名称</string>
    <string name="user_name">用户名</string>
    <string name="user_name_edt">请输入用户名</string>
    <string name="repay_date">还款日</string>
    <string name="repay_date_example">5日</string>
    <string name="monthly_supply">*月供金额</string>
    <string name="monthly_supply_edt">请输入月供金额</string>
    <string name="allperiods_count">总期数</string>
    <string name="allperiods_count_example">1期</string>
    <string name="currentperiods_count">当前期数</string>
    <string name="save">保存</string>
    <string name="reminders_txt">账单提醒</string>

    <string name="business_name_example">人人贷</string>
    <string name="user_name_example">用户名</string>
    <string name="day_count_example">05</string>
    <string name="pay_limit">天内还款</string>
    <string name="pay_overdue">已逾期</string>
    <string name="pay_sure">确认还款</string>
    <string name="shoud_pay_example">500.00</string>
    <string name="shoud_pay_txt">本期应还</string>
    <string name="pay_count_txt">还款期数</string>
    <string name="add_bill">添加账单</string>

    <string name="bill_txt">账单</string>
    <string name="loan_supermarket">贷一笔</string>
    <string name="mine">我的</string>
    <string name="bookkeeping">图表</string>
    <string name="loan_supermarket_title">贷款超市</string>

    <string name="agreement_title">51借款本网络协议</string>
    <string name="uninstall_weixin">检查到您手机没有安装微信，请安装后使用该功能</string>
    <string name="public_dialog">还差一步就可以调侃本本啦！请在微信-通讯录-搜索框粘贴搜索“犀牛优选”公众号，点击关注即可！</string>
    <string name="is_goback">是否退出当前账号</string>

    <string name="environmental">环境配置：</string>
    <string name="sure_change">确认</string>

    <string name="phone_number">手机号</string>
    <string name="name">姓名</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
</resources>
