<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_dialog"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/dialog_title"
        android:text="@string/dialog_title_signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_15"
        android:textColor="@color/login_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/qb_px_50"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/qb_px_54"
        android:layout_marginBottom="@dimen/qb_px_50">

        <TextView
            android:id="@+id/cancle_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancle"
            android:textSize="@dimen/sp_13"
            android:textColor="@color/login_button"
            android:background="@drawable/round_cancle"
            android:paddingLeft="@dimen/qb_px_40"
            android:paddingRight="@dimen/qb_px_40"
            android:paddingTop="@dimen/qb_px_10"
            android:paddingBottom="@dimen/qb_px_10"/>

        <TextView
            android:id="@+id/sure_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sure"
            android:textSize="@dimen/sp_13"
            android:paddingLeft="@dimen/qb_px_40"
            android:paddingRight="@dimen/qb_px_40"
            android:paddingTop="@dimen/qb_px_10"
            android:paddingBottom="@dimen/qb_px_10"
            android:textColor="@color/login_button"
            android:background="@drawable/round_sure"
            android:layout_toRightOf="@+id/cancle_btn"
            android:layout_marginLeft="@dimen/qb_px_95"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>