<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_background">

    <include layout="@layout/tool_bar"/>

    <LinearLayout
        android:id="@+id/phone_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/qb_px_237">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phonenumber"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/login_button"/>

        <EditText
            android:id="@+id/phonenumber_edt"
            android:layout_width="@dimen/qb_px_369"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/qb_px_43"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/login_button"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/code_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/phone_layout"
        app:layout_constraintTop_toBottomOf="@+id/phone_layout"
        android:layout_marginTop="@dimen/qb_px_32"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_15"
            android:text="@string/verificationcode"
            android:textColor="@color/login_button"/>

        <EditText
            android:id="@+id/vercode_edt"
            android:layout_width="@dimen/qb_px_201"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/qb_px_43"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/login_button"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_getcode"
            android:paddingTop="@dimen/qb_px_8"
            android:paddingBottom="@dimen/qb_px_8"
            android:paddingLeft="@dimen/qb_px_12"
            android:paddingRight="@dimen/qb_px_12"
            android:layout_marginLeft="@dimen/qb_px_25">

            <TextView
                android:id="@+id/getvercode_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/getcode"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/login_button"/>

            <RelativeLayout
                android:id="@+id/count_down_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    android:id="@+id/count_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="60"
                    android:textSize="@dimen/sp_12"
                    android:textColor="@color/login_button"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/count_down"
                    android:text="@string/resend_code"
                    android:textSize="@dimen/sp_12"
                    android:textColor="@color/login_button"/>

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_layout"
        android:background="@mipmap/login_background"/>

    <Button
        android:id="@+id/agreement_box"
        android:layout_width="@dimen/qb_px_26"
        android:layout_height="@dimen/qb_px_26"
        app:layout_constraintTop_toBottomOf="@+id/code_layout"
        app:layout_constraintLeft_toLeftOf="@+id/code_layout"
        android:layout_marginTop="@dimen/qb_px_51"
        android:background="@mipmap/box_checked"
        android:clickable="true"/>

    <TextView
        android:id="@+id/agreement_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agreement"
        android:textSize="@dimen/sp_12"
        android:textColor="@color/login_button"
        app:layout_constraintLeft_toRightOf="@+id/agreement_box"
        app:layout_constraintTop_toTopOf="@+id/agreement_box"
        app:layout_constraintBottom_toBottomOf="@+id/agreement_box"
        android:layout_marginLeft="@dimen/qb_px_22"/>

    <TextView
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agreement_box"
        android:text="@string/login_sure"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        android:paddingTop="@dimen/qb_px_20"
        android:paddingBottom="@dimen/qb_px_20"
        android:paddingLeft="@dimen/qb_px_242"
        android:paddingRight="@dimen/qb_px_242"
        android:layout_marginTop="39dp"
        android:background="@drawable/round_login"/>

</android.support.constraint.ConstraintLayout>