<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/qb_px_290"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/item_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="@dimen/qb_px_15"
        android:paddingBottom="@dimen/qb_px_15">

        <LinearLayout
            android:id="@+id/item_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/qb_px_75"
            android:layout_marginRight="@dimen/qb_px_46"
            android:background="@drawable/round_repayment"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/qb_px_18"
                android:layout_marginTop="@dimen/qb_px_20"
                android:layout_marginBottom="@dimen/qb_px_10"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="@dimen/qb_px_40"
                    android:layout_height="@dimen/qb_px_40"
                    android:background="@drawable/circular"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="@dimen/qb_px_24"
                        android:layout_height="@dimen/qb_px_24"
                        android:layout_gravity="center"
                        android:src="@mipmap/loan_img"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/platform_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/business_name_example"
                    android:textSize="@dimen/sp_15"
                    android:textColor="@color/login_button"
                    android:layout_marginLeft="@dimen/qb_px_22"/>

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/user_name_example"
                    android:textSize="@dimen/sp_12"
                    android:textColor="@color/login_button"
                    android:layout_marginLeft="@dimen/qb_px_21"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/qb_px_16"
                android:layout_marginRight="@dimen/qb_px_21"
                android:background="@color/strip_background"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginLeft="@dimen/qb_px_20"
                android:layout_marginRight="@dimen/qb_px_20"
                android:layout_marginTop="@dimen/qb_px_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/pay_time"
                    android:text="@string/already_pay"
                    android:textSize="@dimen/sp_12"
                    android:textColor="@color/login_button"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/qb_px_20"
                android:layout_marginRight="@dimen/qb_px_20"
                android:layout_marginTop="@dimen/qb_px_40">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/money_shoudpay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shoud_pay_example"
                        android:textSize="@dimen/sp_12"
                        android:textColor="@color/login_button"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/money_shoudpay"
                        android:text="@string/all_pay"
                        android:textSize="@dimen/sp_12"
                        android:textColor="@color/login_button"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|right"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/pay_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="2018.8.14"
                        android:textSize="@dimen/sp_12"
                        android:textColor="@color/login_button"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pay_complite_date"
                        android:textSize="@dimen/sp_12"
                        android:textColor="@color/login_button"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>