<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_dialog"
    android:paddingLeft="@dimen/qb_px_20"
    android:paddingRight="@dimen/qb_px_20"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/dialog_title"
        android:text="@string/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/sp_15"
        android:textColor="@color/login_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/qb_px_30"/>

    <EditText
        android:id="@+id/suggestion_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:padding="@dimen/qb_px_20"
        android:textSize="@dimen/sp_12"
        android:gravity="start"
        android:background="@drawable/round_getcode"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title"
        android:layout_marginTop="@dimen/qb_px_30"
        android:layout_marginLeft="@dimen/qb_px_70"
        android:layout_marginRight="@dimen/qb_px_70"/>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/suggestion_edt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/qb_px_40"
        android:layout_marginBottom="@dimen/qb_px_30"
        android:layout_marginLeft="@dimen/qb_px_70"
        android:layout_marginRight="@dimen/qb_px_70"
        android:paddingLeft="@dimen/qb_px_20"
        android:paddingRight="@dimen/qb_px_20">

        <TextView
            android:id="@+id/cancle_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancle"
            android:textSize="@dimen/sp_13"
            android:textColor="@color/login_button"
            android:background="@drawable/round_cancle"
            android:layout_alignParentLeft="true"
            android:singleLine="true"
            android:paddingLeft="@dimen/qb_px_54"
            android:paddingRight="@dimen/qb_px_54"
            android:paddingTop="@dimen/qb_px_10"
            android:paddingBottom="@dimen/qb_px_10"
            android:layout_marginRight="@dimen/qb_px_90"/>

        <TextView
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textSize="@dimen/sp_13"
            android:paddingLeft="@dimen/qb_px_54"
            android:paddingRight="@dimen/qb_px_54"
            android:paddingTop="@dimen/qb_px_10"
            android:paddingBottom="@dimen/qb_px_10"
            android:singleLine="true"
            android:textColor="@color/login_button"
            android:background="@drawable/round_sure"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>